<resources>
    <string name="app_name">Anjinho Com Patas</string>
    <string name="action_settings">Configurações</string>
    <string name="descobrir_idade">Resultado</string>
    <string name="numero_nao_digitado">Nenhum número digitado!</string>
    <string name="desenvolvimento">Em desenvolvimento</string>
    <string name="text_idade_cachorro">Digite a idade do seu cachorro, para descobrir quantos anos humanos ele possui!</string>
    <string name="opc_menu_inicial">Inicial</string>
    <string name="opc_menu_favoritos">Favoritos</string>
    <string name="opc_menu_doar_um_amigo">Doar um amigo</string>
    <string name="opc_menu_ajuda">Ajuda</string>
    <string name="opc_menu_sair">Sair</string>
    <string name="opc_menu_entrar">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_cadastre_se">Não possui cadastro? Cadastre-se</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Endereço de email incorreto</string>
    <string name="error_invalid_password">Informe a senha</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Informe esse campo</string>
    <string name="permission_rationale">As permissão de contatos são necessárias para fornecer e-mails</string>

    <string name="facebook_app_id">1119184398216323</string>
    <string name="fb_login_protocol_scheme">fb1119184398216323</string>
    <string name="fb_operacao_cancelada">Operação cancelada</string>

    <string name="erro_comunicacao">Erro de comunicação</string>
    <string name="key_usuriao_logado">usuario_logado</string>
    <string name="key_app_name">anjinho_com_patas</string>

    <string name="prompt_nome">Nome</string>
    <string name="prompt_endereco">Endereco</string>
    <string name="prompt_nascimento">Data de nascimento</string>
    <string name="prompt_confirmacao_senha">Confirmação senha</string>
    <string name="prompt_cadastrar">Cadastrar</string>

    <string name="nomeDoAnimal">Nome do animal</string>

    <string name="error_preencha_campo">Preencha o campo</string>
    <string name="error_email_cadastado">Email já está cadastrado</string>
    <string name="error_senha_diferente">Confirmação de senha diferente</string>
    <string name="msm_cadastro_sucesso">Cadastro efetuado com sucesso!</string>
    <string name="msm_cadastro_erro">Não foi possivel efetuar o cadastro, tente novamente!</string>

    <string name="msm_usuario_invaldio">Usuario ou senha inválido</string>
    <string name="msm_realize_cadastro">Realize o cadastro</string>
    <string name="nenhum_favorito">Não há favoritos</string>

</resources>
